--- a/0201_hw.md
+++ b/0201_hw.md
@@ -25,13 +25,16 @@ OX퀴즈
 1) 웹 표준을 만드는 곳은 Mozilla 재단이다.
 - X. W3C나 WHATWG에서 만들었는데 2019년에 단일 버전의 웹 표준이 만들어졌다.
 2) 표(table) 을 만들 때에는 반드시 <th> 태그를 사용해야 한다.
-- X. th태그는 테이블의 셀 제목을 입력할 때 필요한 태그로 필수는 아니다.
+- X. 테이블 태그는 <table>를 사용한다. th태그는 테이블의 셀 제목을 입력할 때 필요한 태그로 필수는 아니다.
 3) 제목(Heading) 태그는 제목 이외에는 사용하지 않는 것이 좋다.
 - O
 4) 리스트를 나열하기 위해서는 <ul> 태그만 사용 할 수 있다.
 - X. 리스트 나열은 <li>태그를 사용한다.
+순서가 있는 리스트 : ol, ul
+순서가 없는 리스트 : ul
+사용자 정의 리스트 : dl
 5) HTML의 태그는 반드시 별도의 닫는 태그가 필요하다.
-- X. <br>, <area>, <base> 등의 태그는 종료 태그가 필요없다.
+- X. <input>, <br>, <area>, <base> 등의 태그는 종료 태그가 필요없다.
 ```
 
 
@@ -67,11 +70,13 @@ A.
 2) 웹 브라우저는 내장 기본 스타일이 있어 CSS가 없어도 작동한다.
 - O.
 3) 자식 요소 프로퍼티는 부모의 프로퍼티를 모두 상속 받는다.
-- X. 박스는 상속받지 않으며, 텍스트 프로퍼티는 상속 받는다. 
+- X. box model과 position는 상속받지 않으며, 텍스트 프로퍼티는 상속 받는다. 
 4) 디바이스마다 화면의 크기가 다른 것을 고려하여 상대 단위인 %를 사용한다.
-- O. %외에도 em, rem 등이 사용된다.
+- O. %외에도 em, rem(폰트) 등이 사용된다.
+rem : 브라우저 기본 폰트 크기에 비례한 단위
 5) id 값은 유일해야 하므로 중복되어서는 안된다
 - O
+하지만, 중복해서 사용했다고 실행 안되거나 웹페이지가 안보이거나 하진 않는다!
 ```
 
 
