--- a/0201_ws.md
+++ b/0201_ws.md
@@ -16,13 +16,13 @@ A.
 </head>
 <body>
   <header>
-    <img src="/image/my_photo.png" alt="ssafy">
+    <img src="C:/Users/Windows10/Desktop/TIL/ssafy/image/my_photo.png" alt="ssafy">
   </header>
 </body>
 </html>
 ```
 
-문제에서 절대경로를 제시했으므로 src에 절대 경로를 입력해 띄워준다.
+문제에서 절대경로를 제시했으므로 그 경로에 맞춰서 `src=`를 작성했다. 그리고 이미지가 제대로 출력되지 않았을 때 대신 띄울 ssafy를 `alt=` 에 작성했다.
 
 
 
@@ -36,7 +36,7 @@ A.
 '''
 <body>
   <header>
-    <img src="C:/Users/Windows 10/Desktop/TIL/ssafy/image/my_photo.png" alt="ssafy">
+    <img src="C:/Users/Windows10/Desktop/TIL/ssafy/image/my_photo.png" alt="ssafy">
   </header>
 </body>
 '''
@@ -45,7 +45,7 @@ A.
 '''
 <body>
   <header>
-    <img src="/image/my_photo.png" alt="ssafy">
+    <img src="../image/my_photo.png" alt="ssafy">
   </header>
 </body>
 '''
@@ -55,11 +55,15 @@ A.
 
 (b) : 상대경로
 
-코드 : `<img src="/image/my_photo.png" alt="ssafy">`
+코드 : `<img src="../image/my_photo.png" alt="ssafy">`
 
 절대경로로 지정하면 전체 폴더의 위치가 변경되거나 github에 올릴 시 문제가 될 수 있다.
 
 그래서 상대경로를 더 많이 이용한다고 한다.
+
+
+
+:bulb: Tip! src 작성할 때 `./` `../` `image/...` 셋 다 괜찮은데 `/image/....` 이렇게 / 부터 시작하면 루트경로로 가게 되므로 사용하지 말것!
 
 
 
@@ -73,7 +77,7 @@ A.
 '''
 <body>
   <header>
-    <a href="https://www.ssafy.com"></a><img src="/image/ssafy.png" alt="ssafy">
+    <a href="https://www.ssafy.com"></a><img src="../image/ssafy.png" alt="ssafy">
   </header>
 </body>
 '''
