--- a/0308_hw.md
+++ b/0308_hw.md
@@ -52,11 +52,29 @@ A. path('ssafy/', views.ssafy)
 
 
 
-1) 입력 데이터가 전송될 URL 지정. 어디로 보낼건지
+1) 입력 데이터가 전송될 URL 지정. 어디로 보낼건지/ 제출할 때 요청할 URL
 
-2) 문자열의 title, content, my-site
+2) 문자열의 title, content, my-site / 
+
+##### `강사님 답`
+
+method = GET(default), POST
+
+어떤 method를 통해서 http url 요청을 하는가
+
+get : 정보를 가져올 때(db에 아무 변화도 없을 때. 조회만 함)
+
+post : db에 변화가 있을 때
+
+지금은 db에 아무것도 없으므로 get 메소드만 가짐
 
 3) form -> create -> server...? 휴웅,... 모르겠습니다으아..
+
+#### `강사님 답`
+
+url 구성은 name만 담당 ( id는 상관X )
+
+/create/?title = 안녕하세요&content=반갑습니다&my-site=파이팅
 
 
 
