--- a/0310_hw.md
+++ b/0310_hw.md
@@ -20,6 +20,8 @@ A.
 
 python manage.py makemigrations
 
+python manage.py migrate
+
 `SQL문 확인 : `
 
 python manage.py sqlmigrate articles 0001
@@ -38,7 +40,11 @@ CREATE TABLE "articles_article" (
 
 `Q. Django에서 사용 가능한 모듈 및 메서드를 대화식 Python Shell에서 사용하려고 할 때, 어 떠한 명령어를 통해 해당 Shell을 실행할 수 있는지 작성하시오.`
 
-A. python manage.py shell_plus
+A. 
+
+확장프로그램에 django-extensions 설치 후
+
+python manage.py shell_plus
 
 
 
