--- a/0323_ws.md
+++ b/0323_ws.md
@@ -28,13 +28,16 @@ urlpatterns = [
 from django.contrib.auth import update_session_auth_hash
 from django.contrib.auth.forms import PasswordChangeForm
 
+# PasswordChangeForm 활용
 @login_required
 def password(request):
     if request.method == 'POST':
-        form = PasswordChangeForm(request.POST, instance=request.user)
+        form = PasswordChangeForm(user=request.user, data=request.POST)
+        # form = PasswordChangeForm(request.user, request.POST)
         if form.is_valid():
-            users = form.save()
-            update_session_auth_hash(request, users)
+            form.save()
+            update_session_auth_hash(request, form.user)  # Important!
+            messages.success(request, 'Your password was successfully updated!')
             return redirect('accounts:index')
     else:
         form = PasswordChangeForm(request.user)
