--- a/0323_hw.md
+++ b/0323_hw.md
@@ -12,6 +12,7 @@ A.
 
 > - is_staff
 > - is_active
+> - is_superuser
 
 
 
@@ -129,9 +130,9 @@ def logout(request):
 
 A.
 
-Django에서 제공하는 로그아웃폼(logout)이 함수 이름과 같아서 충돌이 일어난다.
+문제 : `Django에서 제공하는 로그아웃폼(logout)이 함수 이름과 같아서 폼을 사용하지 못하고 재귀가 발생.`
 
-방법은 두가지가 있는데
+해결방법은 두가지가 있는데
 
 > 1. 함수이름을 다른거로 바꾸기
 > 2. 로그아웃폼을 불러올 때 as를 써서 다른 이름으로 사용하기
