--- a/0324_hw.md
+++ b/0324_hw.md
@@ -16,6 +16,17 @@ A.
 
 
 
+#### 0325 hw 리뷰
+
+틀림!!!! 이게 답임
+
+> - exact(일치)
+> - contains(포함)
+> - gt(큼)
+> - gte(크거나같음)
+
+
+
 ___
 
 
@@ -83,7 +94,7 @@ ___
 
 A.
 
-> comments
+> article.comment_set.all
 
 
 
