--- a/0325_ws.md
+++ b/0325_ws.md
@@ -74,6 +74,20 @@ select grade, count(*) as grade_cnt from hotels group by grade order by grade_cn
 
 
 
+#### 해설 답
+
+```sqlite
+select distinct grade, count(grade) from hotels group by grade
+```
+
+```sqlite
+select grade, count(*) from hotels group by grade order by count(grade) desc;
+```
+
+ 
+
+
+
 ## 문제 6
 
 >  `객실의 위치가 지하 혹은 등급이 deluxe인 객실의 모든 정보를 조회하시오.`
