--- a/0428_hw.md
+++ b/0428_hw.md
@@ -18,7 +18,7 @@
 
 - 부모 노드에서 자식 노드를 추가하는 유일한 방법은 append 메서드 뿐이다
 
-  > False. appendChild, insertBefore 등이 있다
+  > False. append, appendChild, insertBefore 등이 있다
 
 
 
