--- a/0512_hw.md
+++ b/0512_hw.md
@@ -11,6 +11,8 @@
   > False. 
   >
   > 규모가 큰 프로젝트에서 Vuex가 장점이긴 하지만 보통의 규모라면 Vuex가 필수는 아니다
+  >
+  > redux 등이 더 있음
 
 - mutation은 반드시 state를 수정하기 위해서만 사용되어야 한다
 
